--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -50,7 +50,7 @@
     <div class="ext-content">
         <div class="container">
             
-            <div ng-controller="appCtrl">
+            <div ng-controller="AppCtrl">
                     <div ng-repeat="value in DB" class="modal-content caja">
                         <div class="container-fluid">
                             <div class="row">
