--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script type="text/javascript">
             window.onload = function() {
     
-                window.location.href = 'login.html'; // si no es ninguna de los dos va a español
+                window.location.href = 'dashboard/dashboard.html';
 
 }
 </script>
