--- a/dashboard/personalsgoals/personalsgoals.html
+++ b/dashboard/personalsgoals/personalsgoals.html
@@ -10,7 +10,7 @@
 </div>
 
     </div>
-        <div ng-repeat="value in DB" class="modal-content caja">
+        <div ng-repeat="data in DB" class="modal-content caja">
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="col-sm-3">
