--- a/dashboard/projectsgoals/detail.html
+++ b/dashboard/projectsgoals/detail.html
@@ -1,5 +1,5 @@
 <div ng-controller="AppCtrl"  ng-app="app" class="">
-    <div class="row" ng-repeat="value in trello">
+    <div class="row" >
         <div class="col-sm-3 sectionright">
             <div class="col-sm-12">
                 <div class="col-sm-6 iconsinfo">
@@ -104,6 +104,10 @@
             </div>
             <div class="col-sm-12 goals">
                 <div class="modal-content caja">
+lkklk
+                    <div ng-repeat="data in events" class="col-md-6">
+                        <h4>{{data}}</h4>
+                    </div>
                     <div class="timedesc">
                         <p>Lives</p>
                         <div class="container-fluid">
