--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="../css/styleloader.css">
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script>var root = '{{root}}';</script>
+    <script>
+        var root = '{{root}}';
+    </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="../js/jsloader.js"></script>
 </head>
@@ -46,9 +48,6 @@
         <md-button class="md-icon-button" aria-label="More">
           <img src="../images/logo.png" style="width:50px; margin-top:-10px; margin-left:-12px;" >
         </md-button>
-          <md-button class="md-icon-button" aria-label="More">
-            <a href="#" onclick="logout()"><span class="fa-stack fa-lg pull-left"><i style="width:50px; margin-top:-8px; margin-left:-12px;" class="fa fa-close fa-stack-1x"></i></span></a>
-        </md-button>
       </div>
     </md-toolbar>
 </md-content>
@@ -74,24 +73,10 @@
     <script src="../js/review.js"></script>
     <!-- AngularJs -->
     <script src="../node_modules/angular/angular.min.js"></script>
-    
-<!-- Agregamos Firebase a nuestra aplicación -->
-<script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDj8y8lgJoDAmxHFzoO1xAexjRPyEsAgqg",
-    authDomain: "rocket-goals-development.firebaseapp.com",
-    databaseURL: "https://rocket-goals-development.firebaseio.com",
-    storageBucket: "rocket-goals-development.appspot.com",
-  };
-  firebase.initializeApp(config);
-</script>
+
    <!-- <script type="text/javascript" src="../js/angular.min.js"></script>-->
     <script type="text/javascript" src="app.js"></script>
     <script src="https://use.fontawesome.com/5b3b0d1d00.js"></script>
-    <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-    <script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
     <script src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.1/angular-material.js"></script>
