--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -79,7 +79,7 @@
     <script src="https://use.fontawesome.com/5b3b0d1d00.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="../node_modules/angular-aria/angular-aria.min.js"></script>
-    <script src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.1/angular-material.js"></script>
+    <script src="../node_modules/angular-material/angular-material.js"></script>
     
     </body>
 </html>
