--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -71,10 +71,10 @@
   </md-content>
     </div>
     <script src="../js/review.js"></script>
-    <!-- AngularJs -->
-    <script src="../node_modules/angular/angular.min.js"></script>
+    <!-- AngularJs
+    <script src="../node_modules/angular/angular.min.js"></script>-->
 
-   <!-- <script type="text/javascript" src="../js/angular.min.js"></script>-->
+    <script type="text/javascript" src="../js/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script src="https://use.fontawesome.com/5b3b0d1d00.js"></script>
     <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
