--- a/dashboard/projectsgoals/projectsgoals.html
+++ b/dashboard/projectsgoals/projectsgoals.html
@@ -102,9 +102,7 @@
 <script src="../../js/bootstrap-star-rating.js"></script>
 <script type="text/javascript" src="app.js"></script>
 <script src="https://use.fontawesome.com/5b3b0d1d00.js"></script>
-<script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
-<script src="https://cdn.firebase.com/libs/angularfire/0.9.2/angularfire.min.js"></script>
-<script src="../../node_modules/angular-animate/angular-animate.min.js"></script>
-<script src="../../node_modules/angular-aria/angular-aria.min.js"></script>
-<script src="https://cdn.gitcdn.link/cdn/angular/bower-material/v1.1.1/angular-material.js"></script>
+<script src="../../nodemodules/angular-animate/angular-animate.min.js"></script>
+<script src="../../nodemodules/angular-aria/angular-aria.min.js"></script>
+<script src="../../nodemodules/angular-material/angular-material.js"></script>
 </body> 
