--- a/dashboard/projectsgoals/projectsgoals.html
+++ b/dashboard/projectsgoals/projectsgoals.html
@@ -16,7 +16,7 @@
                                 <div class="technology">
                                     <img src="../../images/dinner.png"><img src="../../images/dinner.png">
                                 </div>
-                                  <a class=" btn buttondtl" href="detail.html" ng-click="ver(data)">Detail</a>
+                                  <a class=" btn buttondtl" href="" ng-click="ver(data)">Detail</a>
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
 
                                    </div>
                                 </div>
-                                <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" style="width:20%">
+                                <div class="progress-bar progress-bar-striped progress-bar-danger active" role="progressbar" ng-style="warning">
                                 </div>
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="col-sm-3">
-                        <img src="../../images/dashboard.png" style="width:190px; margin-top:10px">
+                        <img src="../../images/estadouno.png" style="width:200px; margin-bottom:25%; margin-top: 25%">
                     </div>
                 </div>
             </div>
