--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -54,8 +54,8 @@
   <md-content class="">
     <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation">
       <md-nav-item md-nav-click="goto('page1')" onclick="projectgoals();" name="page1" style="margin-left:32%;">Projects</md-nav-item>
-      <md-nav-item md-nav-click="goto('page2')" onclick="personalgoals();" name="page2" style="">personal goals</md-nav-item>
-      <md-nav-item md-nav-click="goto('page3')" onclick="okrs();" name="page3" style="margin-right: 35%;">OKRs</md-nav-item>
+      <md-nav-item md-nav-click="goto('page2')" onclick="personaloals();" name="page2" style="">personal goals</md-nav-item>
+      <md-nav-item md-nav-click="goto('page3')" onclick="oks();" name="page3" style="margin-right: 35%;">OKRs</md-nav-item>
     </md-nav-bar>
     <div class="ext-content">
         <div class="container">
