--- a/dashboard/projectsgoals/detail.html
+++ b/dashboard/projectsgoals/detail.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="col-sm-9">
                     <a class=" buttondtl">Estado</a>
-                    <p>Nombre del Projecto</p>
+                    <p>{{info.Project_Name}}</p>
                 </div>
             </div>
             <div class="col-sm-12 description">
