--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 	</head>
 	<body>
 	<!--
-		<!--añadimos aquí el controlador appController ya que será donde mostremos los usuarios
+		<!--añadimos aquí el controlador appController ya que será donde mostremos los usuarios-->
 		<div class="row" ng-controller="appController">
 			<ul class="breadcrumbs">
 				  <li><a href="#">Inicio</a></li>
-				  <li><a href="#/add">Añadir usuario</a></li>
+				<!--  <li><a href="#/add">Añadir</a></li>-->
 		    </ul>
-		    <!--aquí es donde cargarán todas las vistas dependiendo de la url
+		    <!--aquí es donde cargarán todas las vistas dependiendo de la url-->
 			<div ng-view></div>
-		</div>-->
+
+		</div>
+	</div>
 		<script type="text/javascript" src="js/angular.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers.js"></script>
+		<script type="text/javascript" src="js/trello.js" ></script>
+		<script src="https://api.trello.com/1/client.js"></script>
 	</body>
 </html>
